--- a/force-app/main/default/aura/AccountQualification/AccountQualification.cmp
+++ b/force-app/main/default/aura/AccountQualification/AccountQualification.cmp
@@ -12,13 +12,7 @@
     <aura:attribute name="Spinner" type="Boolean" default="false"/>
     
     
-    <aura:attribute name="PreviousStage" type="String"/>
-    
-    <aura:attribute name="fileData2" type="List" access="global"/>
-    <aura:attribute name="fileBody" type="string" access="global"/>
-    <aura:attribute name="fileName2" type="String" access="global"/>
-    <aura:attribute name="uploadFile2" type="Boolean" access="global"/>
-    <aura:attribute name="deleteFileName" type="String" />
+    <!-- testing dhruv-->
     
     
     
